--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name" : "upnode",
     "description" : "transactional connection queue for dnode",
-    "version" : "0.2.1",
+    "version" : "0.2.2",
     "repository" : {
         "type" : "git",
         "url" : "git://github.com/substack/upnode.git"
@@ -24,7 +24,7 @@
         "test" : "tap test/*.js"
     },
     "dependencies" : {
-        "dnode" : ">=0.9.3 <0.10.0"
+        "dnode" : "~0.9.10"
     },
     "devDependencies" : {
         "tap" : "0.0.x"
